# gift_hunter

./: .dockerignore  .gitignore  Dockerfile  docker-compose.dev.yaml  pyproject.toml
configs/: .gitignore
src/app/adapters/: SessionCreator.py  session_creator.py
src/app/gift_service/: __init__.py  buyer.py  notifyer.py  observer.py
src/app/handlers/: __init__.py  clear_state.py  payment_handlers.py  routers.py  sandbox.py  support.py  welcome.py
src/app/handlers/catalog/: buy_gift.py  gift_catalog.py
src/app/handlers/controls/: __init__.py  auto_buy_settings.py  change_cycles.py  change_max_price_range.py  change_min_price_range.py  change_price_range.py  change_quantity.py  change_supply.py  main_menu.py  profile.py  toggle_auto_buy.py
src/app/handlers/deposit/: __init__.py  deposit.py  payment_handlers.py
src/app/handlers/manual_buy_gift/: __init__.py  buy_gift.py  gift_catalog.py
src/app/helpers/fabric/: controls.py  gift.py  payment.py
src/app/helpers/prepared_messages/: send_settings_menu.py
src/app/helpers/states/: confirm_value.py
src/app/helpers/texts/: menu.py
src/app/infrastructure/bootstrap/: config.py  runner.py
src/app/infrastructure/config/: AppConfig.py  DatabaseConfig.py  PaymentConfig.py  RootConfig.py  TelegramConfig.py  WebhookConfig.py  __init__.py
src/app/logger/: file_handler.py  formatters.py  logger.py
src/app/middlewares/: manage_users.py
src/app/repositories/: CrudRepository.py
src/app/repositories/models/: settings.py  user.py
src/app/schemas/: user_settings.py
src/app/utils/: chunk_list.py
(+34 files in other folders)
