[build-system]
requires = ["setuptools>=80.9.0", "wheel"]

[project]
name = "gift_hunter"
version = "0.1.0"
license = "MIT"
authors = [{ name = "yeegie", email = "lotus9200@gmail.com" }]
requires-python = ">=3.11"
dependencies = [
    "aiofiles==24.1.0",
    "aiogram==3.21.0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.12.13",
    "aiosignal==1.4.0",
    "annotated-types==0.7.0",
    "asyncpg==0.30.0",
    "attrs==25.3.0",
    "certifi==2025.6.15",
    "frozenlist==1.7.0",
    "greenlet==3.2.3",
    "idna==3.10",
    "magic-filter==1.0.12",
    "multidict==6.6.3",
    "propcache==0.3.2",
    "psycopg2-binary==2.9.10",
    "pydantic==2.11.7",
    "pydantic_core==2.33.2",
    "pydantic-settings>=2.0.0",
    "Pygments==2.19.2",
    "python-dotenv==1.1.1",
    "python-multipart==0.0.20",
    "PyYAML==6.0.2",
    "shellingham==1.5.4",
    "sniffio==1.3.1",
    "SQLAlchemy==2.0.41",
    "typing-extensions==4.12.2",
    "typing-inspection==0.4.1",
    "ujson==5.10.0",
    "websockets==15.0.1",
    "yarl==1.20.1"
]


[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
package-dir = { "" = "src" }

[project.scripts]
gift_hunter_bot = "bin.bot.main:main"
